# python_data_template

./: .editorconfig  .envrc  .sops.yaml  README.md  bootstrap-project.sh  justfile  justfile_uv
.zed/: tasks.json
scripts/: bash_render.sh  bash_render_prompts.sh  bash_render_utils.sh  python_render.py
template_files/: .env  .gitattributes  .gitignore  README.md  justfile  mkdocs.yml  pre-commit-config.yaml  pyproject.toml
template_files/data/00_external/: .gitkeep
template_files/data/01_raw/: .gitkeep
template_files/data/02_cleaned/: .gitkeep
template_files/data/03_processed/: .gitkeep
template_files/docs/: index.md
template_files/docs/scripts/: export_html_to_md.py  render_docs.py  render_erds.py
template_files/models/: .gitkeep
template_files/notebooks/: .gitkeep
template_files/references/: .gitkeep  jupytext_reference.md  sops_secret_management.md
template_files/reports/: .gitkeep
template_files/src/: __init__.py  config.py  dataset.py  features.py  paths.py  plots.py  src_path_utils.py
template_files/src/modeling/: __init__.py  predict.py  train.py
template_files/src/shared/: paths.py
